# File2Package.backend.dpkg

./: .gitignore  .gitlab-ci.yml  ReadMe.md  pyproject.toml  setup.cfg
File2Package/backend/: dpkg.py
tests/: tests.py
