[metadata]
name = File2Package.backend.dpkg
#version = 0.1
author = KOLANICH
url = https://gitlab.com/File2Package.py/File2Package.backend.dpkg
description = A dpkg backend for File2Package.
long_description = file: ReadMe.md
keywords = package, location, apt, dpkg, debian, ubuntu, antix, kali
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires = 
	File2Package @ git+https://gitlab.com/File2Package.py/File2Package.py.git
	debparse @ git+https://github.com/KOLANICH/python-debparse.git@fixes

python_requires = >=3.4
zip_safe = True
py_modules = File2Package.backend.dpkg
setup_requires = setuptools_scm;


[options.entry_points]
file_2_package =
	dpkg = File2Package.backend.dpkg:init
